--- a/frontend/pages/adventures/index.html
+++ b/frontend/pages/adventures/index.html
@@ -41,6 +41,7 @@
             <p style="font-size: 24px">
                 Here's a list of places that you can explore in city
             </p>
+            
             <div class="mb-5">
                 <!-- Filters section -->
                 <div class="filter-bar d-flex align-items-center">
@@ -83,7 +84,9 @@
                 </div>
             </div>
             <!-- Display Adventures cards -->
-            <div class="row" id="data"></div>
+            <div class="row" id="data">
+                <div class="category-banner"></div>
+            </div>
         </div>
     </div>
     <!-- Footer -->
